[gd_scene load_steps=20 format=3 uid="uid://cmamgoeqlc4jm"]

[ext_resource type="Shader" uid="uid://phkpvfi57dsg" path="res://shaders/grayscale.gdshader" id="2_1oroq"]
[ext_resource type="Texture2D" uid="uid://cf61nw83jrigg" path="res://ui/battle/foe/selectFrame.png" id="3_ax2rf"]
[ext_resource type="Texture2D" uid="uid://c1wfrkv2vw1v3" path="res://assets/foe_sprites/HEARTS.png" id="3_gy6sy"]
[ext_resource type="Script" uid="uid://dd5jdjpvjwtlm" path="res://scripts/all/foe.gd" id="3_m06fl"]
[ext_resource type="Texture2D" uid="uid://g7fqw3tjte1p" path="res://ui/battle/foe/healthBarNoBorder.png" id="4_2ylyb"]
[ext_resource type="FontFile" uid="uid://bxm5isfgrapdr" path="res://assets/fonts/OMORI_GAME2.ttf" id="5_1oroq"]
[ext_resource type="Texture2D" uid="uid://dcy2vybcd4vtw" path="res://ui/redPointerDown.png" id="6_2ylyb"]
[ext_resource type="PackedScene" uid="uid://p0anj88mu6lh" path="res://ui/battle/attackAnimations.tscn" id="8_m06fl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m06fl"]
shader = ExtResource("2_1oroq")
shader_parameter/enable_effects = false
shader_parameter/tint_color = Vector3(0.5, 0.5, 0.5)

[sub_resource type="Animation" id="Animation_h41dm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5dubd"]
resource_name = "angry"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_rqa53"]
resource_name = "happy"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_gy6sy"]
resource_name = "neutral"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_o20xb"]
resource_name = "sad"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvddu"]
_data = {
&"RESET": SubResource("Animation_h41dm"),
&"angry": SubResource("Animation_5dubd"),
&"happy": SubResource("Animation_rqa53"),
&"neutral": SubResource("Animation_gy6sy"),
&"sad": SubResource("Animation_o20xb")
}

[sub_resource type="Animation" id="Animation_m06fl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/enable_effects")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1oroq"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 480)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/enable_effects")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_m06fl")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gy6sy"]
_data = {
&"RESET": SubResource("Animation_m06fl"),
&"death": SubResource("Animation_1oroq")
}

[sub_resource type="LabelSettings" id="LabelSettings_1oroq"]
font = ExtResource("5_1oroq")
font_size = 22
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Foe" type="Control"]
material = SubResource("ShaderMaterial_m06fl")
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 300.0
script = ExtResource("3_m06fl")

[node name="Sprite" type="Sprite2D" parent="."]
use_parent_material = true
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_gy6sy")
centered = false
hframes = 3
vframes = 4

[node name="SpriteAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
libraries = {
&"": SubResource("AnimationLibrary_hvddu")
}

[node name="TopTextBox" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 88.0
offset_top = 178.0
offset_right = 216.0
offset_bottom = 218.0
theme_override_constants/separation = -6
alignment = 1

[node name="BottomTextBox" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 88.0
offset_top = 219.0
offset_right = 216.0
offset_bottom = 259.0
theme_override_constants/separation = -6
alignment = 1

[node name="HurtAnimations" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
libraries = {
&"": SubResource("AnimationLibrary_gy6sy")
}

[node name="Frame" type="TextureRect" parent="."]
visible = false
z_index = 3
custom_minimum_size = Vector2(125, 57)
layout_mode = 2
offset_left = 88.0
offset_top = 41.0
offset_right = 213.0
offset_bottom = 98.0
texture = ExtResource("3_ax2rf")

[node name="HealthBar" type="TextureProgressBar" parent="Frame"]
layout_mode = 0
offset_left = 27.0
offset_top = 38.0
offset_right = 118.0
offset_bottom = 48.0
value = 100.0
texture_progress = ExtResource("4_2ylyb")

[node name="Name" type="Label" parent="Frame"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 119.0
offset_bottom = 30.0
text = "???"
label_settings = SubResource("LabelSettings_1oroq")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Sprite2D" type="Sprite2D" parent="Frame"]
position = Vector2(63, 68)
texture = ExtResource("6_2ylyb")

[node name="Attack" parent="." instance=ExtResource("8_m06fl")]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
offset_left = -37.0
offset_top = -39.0
offset_right = 263.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2

[node name="AttackSFX" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
